DAY-01/step-02/simple-website-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-website-deployment
  labels:
    app: simple-website
spec:
  replicas: 3
  selector:
    matchLabels:
      app: simple-website
  template:
    metadata:
      labels:
        app: simple-website
    spec:
      imagePullSecrets:
      - name: takima-school-registry
      containers:
        - name: simple-website
          image: registry.gitlab.com/takima-school/images/simple-website:latest
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /health  # Endpoint de health check
              port: 8080
            initialDelaySeconds: 3  # Attendre 3 secondes avant le premier check
            periodSeconds: 10  # Vérifier toutes les 10 secondes
