DAY-01/step-02/simple-website-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-website-service
spec:
  selector:
    app: simple-website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
