DAY-01/step-02/simple-website-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: 'true'
    kubernetes.io/ingress.class: nginx
  name: simple-website-ingress
spec:
  rules:
    - host: quoi.mathis-medard.takima.school
      http:
        paths:
          - backend:
              service:
                name: simple-website-service
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - quoi.mathis-medard.takima.school
      secretName: simple-website-tls
