DAY-01/step-02/unicorn-front-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: 'true'
    kubernetes.io/ingress.class: nginx
  name: unicorn-front-ingress
spec:
  rules:
    - host: feur.mathis-medard.takima.school
      http:
        paths:
          - backend:
              service:
                name: unicorn-front-service
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - feur.mathis-medard.takima.school
      secretName: unicorn-front-tls
